--- a/index.html
+++ b/index.html
@@ -196,10 +196,10 @@
             </section>
             <!--Links-->
             <section>
-                <a target="_bLank" href=""></a><br>    
-                <a target="_bLank" href=""></a><br>
-                <a target="_bLank" href=""></a><br>
-                <a target="_bLank" href=""></a><br>
+                <a target="_bLank" href="https://cloudstackcode.github.io/Providing-the-Best-Laser-Hair-Removal-at-American-Laser-Med-Spa-Midland/">https://cloudstackcode.github.io/Providing-the-Best-Laser-Hair-Removal-at-American-Laser-Med-Spa-Midland/</a><br>    
+                <a target="_bLank" href="https://jeremyparkercloudstack.s3.us-east-005.backblazeb2.com/AmericanLAserMedspa/Providing+the+Best+Laser+Hair+Removal+at+American+Laser+Med+Spa+%E2%80%93+Midland/index.html">https://jeremyparkercloudstack.s3.us-east-005.backblazeb2.com/AmericanLAserMedspa/Providing+the+Best+Laser+Hair+Removal+at+American+Laser+Med+Spa+%E2%80%93+Midland/index.html</a><br>
+                <a target="_bLank" href="https://providing-the-best-laser-ha-git-692efc-cloudstackcodes-projects.vercel.app/">https://providing-the-best-laser-ha-git-692efc-cloudstackcodes-projects.vercel.app/</a><br>
+                <a target="_bLank" href="https://stately-gnome-d6be83.netlify.app/">https://stately-gnome-d6be83.netlify.app/</a><br>
             </section>
         <!---Sidebar-->
         <div class="side-bar">
